# stock-pilot

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/api/: mod.rs  stocks.rs
src/models/: llama.rs  mod.rs  prompts.rs  text_output_stream.rs
training_data/: training_data.json
