[package]
name = "stock_pilot"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.7.2" }
candle-transformers = { version = "0.7.2" }
candle-nn = { version = "0.7.2" }
tokenizers = { version = "0.20.1" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.132" }
anyhow = { version = "1.0.90" }
chrono = { version = "0.4.38" }
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
futures = { version = "0.3.31" }
dialoguer = "0.11.0"
indicatif = "0.17.8"
console = { version = "0.15.8", features = ["windows-console-colors"] }
